home page footer overlap issue resolved

--- a/src/Home.css
+++ b/src/Home.css
@@ -386,10 +386,11 @@ option {
 .homediv-h1{
   color: #57585a;
   font-family: open sans;
-  font-size: 10px;
+  font-size: 11px;
+  font-weight: 100;
   position: absolute;
   top: 53%;
-  left: 32%;
+  left: 5%;
   color: black;
 
 }
